syntax = "proto2";

option cc_enable_arenas = true;

package c2017.trigger;

message TriggerInput {
  required uint64 timestamp = 1;
  required double encoder_position = 2;
}

message TriggerOutput {
  required uint64 timestamp = 1;
  required double voltage = 2;
}

message TriggerStatus {
  required uint64 timestamp = 1;
  required double observed_velocity = 2;
  required double goal_velocity = 3;
  required double position = 4;
}

message TriggerGoal {
  required uint64 timestamp = 1;
  required double balls_per_second = 2;
}
