syntax = "proto2";

package o2016.drivetrain;

option cc_enable_arenas = true;

enum Gear {
  kLowGear = 0;
  kHighGear = 1;
}

enum DriveType {
  kDistanceCommand = 0;
  kVelocityCommand = 1;
}

message DrivetrainState {
  required uint64 timestamp = 1;
  required double forward_distance = 2;
  required double heading = 3;
  required double forward_velocity = 4;
  required double angular_velocity = 5;
}

message DrivetrainGoal {
  required uint64 timestamp = 1;
  message VelocityCommand {
    required double forward_velocity = 1;
    required double angular_velocity = 2;
  }

  message DistanceCommand {
    required DrivetrainState final_state = 1;
  }

  required Gear gear = 2;

  oneof command {
    VelocityCommand velocity_command = 3;
    DistanceCommand distance_command = 4;
  }
}

message DrivetrainStatus {
  required uint64 timestamp = 1;
  required DrivetrainState observed_state = 2;

  required DriveType current_driving_type = 3;
  required Gear current_gear = 4;
}

message DrivetrainInput {
  required uint64 timestamp = 1;
  // Encoders in meters
  required double left_encoder = 2;
  required double right_encoder = 3;

  required double gyro_angle = 4;
}

message DrivetrainOutput {
  required uint64 timestamp = 1;
  required double left_voltage = 2;
  required double right_voltage = 3;
  required bool high_gear = 4;
}
